20241216 支付方法变更

--- a/fico-s4apps01/zpaymentmethod/webapp/css/style.css
+++ b/fico-s4apps01/zpaymentmethod/webapp/css/style.css
@@ -1,1 +1,5 @@
 /* Enter your custom styles here */
+.myCustomTable {
+    height: 100%; /* Set your desired height */
+    overflow-y: auto; /* Optional: add scroll if content exceeds height */
+}
