20241216 SD032 修改导出逻辑

--- a/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
+++ b/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
@@ -441,6 +441,7 @@
                         width="10rem"
                         sortProperty="MatlAccountAssignmentGroup"
                         label="{i18n>MatlAccountAssignmentGroup}"
+                        visible="false"
                     >
                         <table:template>
                             <Text
