FICO-019＆026_長期滞在＆低価法レポート 20241218

--- a/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
+++ b/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
@@ -50,6 +50,7 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="ValuationQuantity" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="BaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ActualCost" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="MaterialPriceUnitQty" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="InventoryAmount" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ValuationUnitPrice" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ValuationAmount" visible="false"/>
