20241219 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
@@ -645,7 +645,7 @@
                 <core:CustomData key="p13nData" value='\{"columnKey":"ChargeableRate", "leadingProperty":"ChargeableRate", "sortProperty":"ChargeableRate", "filterProperty": "ChargeableRate"}'/>
               </t:customData>
               <t:template>
-                <Text text="{path:'ChargeableRate', formatter:'.formatter.formatFloat'}"/>
+                <Text text="{ChargeableRate}"/>
               </t:template>
             </t:Column>
 
