--- a/fico-s4apps01/paidpaydocument/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaydocument/webapp/view/Main.view.xml
@@ -25,8 +25,8 @@
           <smartFilterBar:SmartFilterBar id="SFBDocument" useToolbar="false" entitySet="PaidPayDocument" smartVariant="__SVM01" persistencyKey="DocumentBar" search="onSearch">
 
 		      <!--<RadioButtonGroup id="rbg1" columns="4" width="100%" class="sapUiMediumMarginBottom">-->
-		      <RadioButton groupName="GroupA" id="Option1" text="{i18n>Option1}" selected="true" select="onButtonSelect"/>
-		      <RadioButton groupName="GroupA" id="Option2" text="{i18n>Option2}" select="onButtonSelect"/>
+		      <RadioButton groupName="GroupA" id="Option1" text="{i18n>Option1}" selected="true" select="onButtonSelect" enabled="{= ${local>/authorityCheck/button/RevenueCost}}"/>
+		      <RadioButton groupName="GroupA" id="Option2" text="{i18n>Option2}" select="onButtonSelect" enabled="{= ${local>/authorityCheck/button/APAR}}"/>
 				<!--</RadioButtonGroup>-->
 				<!--filterChange="check">-->
 				<smartFilterBar:controlConfiguration>
@@ -71,8 +71,8 @@
 		<smartTable:customToolbar>
 		  <OverflowToolbar id = "toolbar" width="100%">
 			<ToolbarSpacer/>
-			  <Button id="post" icon="sap-icon://create" text="{i18n>ButtonText1}" tooltip="{i18n>ButtonText1}" press="onPost"/>
-			  <Button id="cancel" icon="sap-icon://create" text="{i18n>ButtonText2}" tooltip="{i18n>ButtonText2}" press="onCancel"/>
+			  <Button id="post" icon="sap-icon://create" text="{i18n>ButtonText1}" tooltip="{i18n>ButtonText1}" press="onPost" enabled="{= ${local>/authorityCheck/button/Post}}"/>
+			  <Button id="cancel" icon="sap-icon://create" text="{i18n>ButtonText2}" tooltip="{i18n>ButtonText2}" press="onCancel" enabled="{= ${local>/authorityCheck/button/Reserve}}"/>
 		  </OverflowToolbar>
 		</smartTable:customToolbar>
 
