SD-026 受注管理レポート 20241224

--- a/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
@@ -29,15 +29,15 @@
                     <FlexBox fitContainer="true">
                         <smartFilterBar:SmartFilterBar id="idSmartFilterBar" entitySet="SalesDocumentList" useToolbar="false" smartVariant="__SVM01" persistencyKey="SalesDocumentListSFB" initialized="onsMrilterBarInitialized" search="onSearch">
                             <smartFilterBar:controlConfiguration>
-                                <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" filterType="multiple" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/>
+                                <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" filterType="multiple" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="SalesDocument" visibleInAdvancedArea="true" label="{i18n>SalesDocument}"/>
-                                <smartFilterBar:ControlConfiguration index='30' key="SoldToParty" visibleInAdvancedArea="true" label="{i18n>SoldToParty}"/>
-                                <smartFilterBar:ControlConfiguration index='40' key="SalesDocumentType" filterType="multiple" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>SalesDocumentType}"/>
-                                <smartFilterBar:ControlConfiguration index='50' key="SalesDocApprovalStatus" filterType="multiple" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>SalesDocApprovalStatus}"/>
+                                <smartFilterBar:ControlConfiguration index='30' key="SoldToParty" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>SoldToParty}"/>
+                                <smartFilterBar:ControlConfiguration index='40' key="SalesDocumentType" filterType="multiple" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>SalesDocumentType}"/>
+                                <smartFilterBar:ControlConfiguration index='50' key="SalesDocApprovalStatus" filterType="multiple" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>SalesDocApprovalStatus}"/>
                                 <smartFilterBar:ControlConfiguration index='60' key="YY1_SalesDocType_SDH" visibleInAdvancedArea="true" label="{i18n>YY1_SalesDocType_SDH}"/>
                                 <smartFilterBar:ControlConfiguration index='70' key="PurchaseOrderByCustomer" visibleInAdvancedArea="true" label="{i18n>PurchaseOrderByCustomer}"/>
                                 <smartFilterBar:ControlConfiguration index='80' key="Product" visibleInAdvancedArea="true" label="{i18n>Product}"/>
-                                <smartFilterBar:ControlConfiguration index='90' key="Plant" filterType="multiple" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>Plant}"/>
+                                <smartFilterBar:ControlConfiguration index='90' key="Plant" filterType="multiple" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Plant}"/>
                                 <smartFilterBar:ControlConfiguration index='100' key="RequestedDeliveryDate" visibleInAdvancedArea="true" label="{i18n>RequestedDeliveryDate}"/>
                                 <smartFilterBar:ControlConfiguration index='110' key="SalesDocumentDate" visibleInAdvancedArea="true" label="{i18n>SalesDocumentDate}"/>
                                 <smartFilterBar:ControlConfiguration index='120' key="ConfirmedDeliveryDate" visibleInAdvancedArea="true" label="{i18n>ConfirmedDeliveryDate}"/>
