20241225 SD011 売上検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptresult/webapp/view/Group.view.xml
+++ b/sd-s4apps01/salesacceptresult/webapp/view/Group.view.xml
@@ -56,7 +56,7 @@
             <smartTable:customToolbar>
 			<OverflowToolbar width="100%">
 			  <ToolbarSpacer/>
-				  <Button id="save" icon="sap-icon://save" text="{i18n>saveButtonText}" tooltip="{i18n>saveButtonText}" press="onSave" enabled="{= ${local>/authorityCheck/button/Finish}"/> 
+				  <Button id="save" icon="sap-icon://save" text="{i18n>saveButtonText}" tooltip="{i18n>saveButtonText}" press="onSave" enabled="{= ${local>/authorityCheck/button/Finish}}"/> 
 
             </OverflowToolbar>
 		    </smartTable:customToolbar>
