SD-026 受注管理レポート 20241226

--- a/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
@@ -49,6 +49,7 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="Indicator4" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="Indicator5" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="Indicator6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="UserEmail" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="SalesDocumentItem" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ScheduleLine" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="SalesDocumentTypeName" visible="false"/>
